--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "target": "es2016" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
         "jsx": "preserve" /* Specify what JSX code is generated. */,
-        "module": "commonjs" /* Specify what module code is generated. */,
+        "module": "CommonJS" /* Specify what module code is generated. */,
         "baseUrl": "src" /* Specify the base directory to resolve non-relative module names. */,
         "esModuleInterop": true /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */,
         "forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
