--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@types/react": "^18.0.25",
         "@types/react-dom": "^18.0.9",
         "@types/styled-components": "^5.1.26",
+        "@types/uuid": "^9.0.0",
         "babel-loader": "^9.1.0",
         "babel-plugin-styled-components": "^2.0.7",
         "css-loader": "^6.7.2",
@@ -43,6 +44,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.4.5",
-        "swiper": "^8.4.5"
+        "swiper": "^8.4.5",
+        "uuid": "^9.0.0"
     }
 }
