--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@babel/preset-env": "^7.20.2",
         "@babel/preset-react": "^7.18.6",
         "@babel/preset-typescript": "^7.18.6",
+        "@types/lodash-es": "^4.17.6",
         "@types/react": "^18.0.25",
         "@types/react-dom": "^18.0.9",
         "@types/styled-components": "^5.1.26",
@@ -31,6 +32,7 @@
         "eslint-plugin-prettier": "^4.2.1",
         "file-loader": "^6.2.0",
         "html-webpack-plugin": "^5.5.0",
+        "lodash-es": "^4.17.21",
         "prettier": "^2.8.0",
         "style-loader": "^3.3.1",
         "styled-components": "^5.3.6",
